--- a/FinPlan.ApiService/appsettings.json
+++ b/FinPlan.ApiService/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FinPlanSettings": {
+    "UseLocalStorage": false
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:mssql-199344-0.cloudclusters.net,10085;Initial Catalog=dev-glamourre;Persist Security Info=False;User ID=dev-gramourre-sa;Password=P@DevGlam@db11;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  }
 }
