--- a/FinPlan.ApiService/FinPlan.ApiService.csproj
+++ b/FinPlan.ApiService/FinPlan.ApiService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FinPlan.ServiceDefaults\FinPlan.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\FinPlan.Shared\FinPlan.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
