--- a/FinPlan.Web/appsettings.json
+++ b/FinPlan.Web/appsettings.json
@@ -9,6 +9,9 @@
     "DefaultConnection": "Server=tcp:mssql-199344-0.cloudclusters.net,10085;Initial Catalog=dev-glamourre;Persist Security Info=False;User ID=dev-gramourre-sa;Password=P@DevGlam@db11;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "FinPlanSettings": {
-    "UseLocalStorage": false
+    "UseLocalStorage": false,
+    "ApiBaseUrlLocal": "https://localhost:7330",
+    "ApiBaseUrlCloud": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net",
+    "ApiBaseUrlLocal2": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net"
   }
 }
