--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="ClosedXML" Version="0.105.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Custom\" />
+  </ItemGroup>
+
 </Project>
