--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Components\Components\" />
     <Folder Include="Components\Custom\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
