--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -16,6 +16,9 @@
   <ItemGroup>
     <Content Remove="Components\Pages\Archive\RetirementSpendingPlanner.razor" />
     <Content Remove="Components\Pages\Archive\SavingsPlanner.razor" />
+    <Content Remove="Components\Pages\CostBreakdown.razor" />
+    <Content Remove="Components\Pages\FamilySavingsPlannerTab.razor" />
+    <Content Remove="Components\Pages\SavingsYearlyDetailsComponent.razor" />
   </ItemGroup>
 
   <ItemGroup>
