--- a/FinPlan.Web/appsettings.Development.json
+++ b/FinPlan.Web/appsettings.Development.json
@@ -5,4 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+  ,"Authentication": {
+    "Google": {
+      "ClientId": "297835179012-6id1n8sjsk1orho8m65ju8bje173k52e.apps.googleusercontent.com",
+      "ClientSecret": "REPLACE_WITH_YOUR_CLIENT_SECRET_OR_USE_USER_SECRETS"
+    }
+  }
 }
