--- a/FinPlan.Web/appsettings.json
+++ b/FinPlan.Web/appsettings.json
@@ -11,4 +11,10 @@
     "ApiBaseUrlCloud": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net",
     "ApiBaseUrlLocal2": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net"
   }
+  ,"Authentication": {
+    "Google": {
+      "ClientId": "YOUR_GOOGLE_CLIENT_ID",
+      "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
+    }
+  }
 }
