--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -1,26 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>a5a1e1cc-48b3-4fbc-943f-da26d54c1ecb</UserSecretsId>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Components\Models\CostItem.cs" />
-    <Compile Remove="Components\Models\InflationSource.cs" />
-    <Compile Remove="Components\Models\RetirementAdjustOption.cs" />
-    <Compile Remove="Components\Models\StandardCostCategories.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="Components\Pages\Archive\RetirementSpendingPlanner.razor" />
-    <Content Remove="Components\Pages\Archive\SavingsPlanner.razor" />
-    <Content Remove="Components\Pages\CostBreakdown.razor" />
-    <Content Remove="Components\Pages\CostOfLiving.razor" />
-    <Content Remove="Components\Pages\FamilySavingsPlannerTab.razor" />
-    <Content Remove="Components\Pages\SavingsYearlyDetailsComponent.razor" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FinPlan.ServiceDefaults\FinPlan.ServiceDefaults.csproj" />
@@ -33,6 +18,7 @@
     <PackageReference Include="Polly" Version="8.1.1" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
