--- a/FinPlan.Web/appsettings.json
+++ b/FinPlan.Web/appsettings.json
@@ -10,11 +10,11 @@
     "ApiBaseUrlLocal": "https://localhost:7330",
     "ApiBaseUrlCloud": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net",
     "ApiBaseUrlLocal2": "https://api2-money-amperespark-hcexegeua4fjasej.eastus2-01.azurewebsites.net"
-  }
-  ,"Authentication": {
+  },
+  "Authentication": {
     "Google": {
-      "ClientId": "YOUR_GOOGLE_CLIENT_ID",
-      "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
+      "ClientId": "297835179012-6id1n8sjsk1orho8m65ju8bje173k52e.apps.googleusercontent.com",
+      "ClientSecret": "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"
     }
   }
 }
