--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Components\Models\" />
     <Folder Include="Models\" />
+    <Folder Include="Pages\CorePages\" />
   </ItemGroup>
 
 </Project>
