--- a/FinPlan.Web/appsettings.Development.json
+++ b/FinPlan.Web/appsettings.Development.json
@@ -4,11 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
-  ,"Authentication": {
+  },
+  "Authentication": {
     "Google": {
       "ClientId": "297835179012-6id1n8sjsk1orho8m65ju8bje173k52e.apps.googleusercontent.com",
       "ClientSecret": "REPLACE_WITH_YOUR_CLIENT_SECRET_OR_USE_USER_SECRETS"
     }
+  },
+  "AdSense": {
+    "ClientId": "",
+    "UseTestAds": true,
+    "DefaultSlot": "home_bottom_responsive"
   }
 }
