Fix AdSense integration: Replace unsafe eval calls with safe fpAds.safePush method to prevent SyntaxError on ad loading

--- a/FinPlan.Web/appsettings.Development.json
+++ b/FinPlan.Web/appsettings.Development.json
@@ -12,7 +12,7 @@
     }
   },
   "AdSense": {
-    "ClientId": "",
+    "ClientId": "ca-pub-1906825262608580",
     "UseTestAds": true,
     "DefaultSlot": "home_bottom_responsive"
   }
