--- a/FinPlan.Web/FinPlan.Web.csproj
+++ b/FinPlan.Web/FinPlan.Web.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Ads\" />
     <Folder Include="Components\Shared\" />
     <Folder Include="Models\" />
   </ItemGroup>
