--- a/FinPlan.Web/appsettings.Development.json
+++ b/FinPlan.Web/appsettings.Development.json
@@ -5,15 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Authentication": {
-    "Google": {
-      "ClientId": "297835179012-6id1n8sjsk1orho8m65ju8bje173k52e.apps.googleusercontent.com",
-      "ClientSecret": "REPLACE_WITH_YOUR_CLIENT_SECRET_OR_USE_USER_SECRETS"
-    }
-  },
   "AdSense": {
     "ClientId": "ca-pub-1906825262608580",
     "UseTestAds": true,
-    "DefaultSlot": "home_bottom_responsive"
+    "DefaultSlot": ""
   }
 }
